# postgresql_instrumentation

./: .gitignore  DEMO_PLAN.md  INSTALL_SUMMARY.md  ReadMe.md  generate_embeddings.py  jsonl_to_csv.py  setup_beauty.sql
pg_mooncake/duckdb_mooncake/: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
pg_mooncake/duckdb_mooncake/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
pg_mooncake/duckdb_mooncake/.github/workflows/: MainDistributionPipeline.yml
pg_mooncake/duckdb_mooncake/moonlink_ffi/: Cargo.toml
pg_mooncake/duckdb_mooncake/moonlink_ffi/src/: lib.rs
pg_mooncake/duckdb_mooncake/src/: mooncake_extension.cpp
pg_mooncake/duckdb_mooncake/src/include/: mooncake_extension.hpp  pgmooncake.hpp
pg_mooncake/duckdb_mooncake/src/include/moonlink/: moonlink.hpp  moonlink_ffi.hpp
pg_mooncake/duckdb_mooncake/src/include/storage/: mooncake_catalog.hpp  mooncake_schema.hpp  mooncake_storage.hpp  mooncake_table.hpp  mooncake_table_metadata.hpp  mooncake_transaction.hpp  mooncake_transaction_manager.hpp
pg_mooncake/duckdb_mooncake/src/moonlink/: moonlink.cpp
pg_mooncake/duckdb_mooncake/src/storage/: mooncake_catalog.cpp  mooncake_scan.cpp  mooncake_schema.cpp  mooncake_storage.cpp  mooncake_table.cpp  mooncake_table_metadata.cpp  mooncake_transaction.cpp  mooncake_transaction_manager.cpp
pg_mooncake/duckdb_mooncake/test/sql/: mooncake.test
pg_mooncake/moonlink/: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.amd64  LICENSE  README.md  deny.toml  rust-toolchain.toml
pg_mooncake/moonlink/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  prebuild.sh  setup.sh
pg_mooncake/moonlink/.devcontainer/shared-iceberg-rest-db/: iceberg.db
pg_mooncake/moonlink/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
pg_mooncake/moonlink/.github/ISSUE_TEMPLATE/: bug_report.md  work_item.md
pg_mooncake/moonlink/.github/workflows/: ci.yml  ci_typos.yml  community_auto_label.yml  stale.yml
pg_mooncake/moonlink/deploy/aws/dev/deployment/: moonlink_deployment.yaml
pg_mooncake/moonlink/deploy/aws/dev/service/: moonlink_service.yaml  postgres_service.yaml
pg_mooncake/moonlink/deploy/aws/prod/deployment/: moonlink_deployment.yaml
pg_mooncake/moonlink/deploy/aws/prod/service/: moonlink_service.yaml
pg_mooncake/moonlink/deploy/aws/staging/deployment/: moonlink_deployment.yaml
pg_mooncake/moonlink/deploy/aws/staging/service/: moonlink_service.yaml
pg_mooncake/moonlink/deploy/gcp/dev/deployment/: moonlink_deployment.yaml
pg_mooncake/moonlink/deploy/gcp/dev/service/: moonlink_service.yaml  postgres_service.yaml
pg_mooncake/moonlink/deploy/gcp/prod/deployment/: moonlink_deployment.yaml
pg_mooncake/moonlink/deploy/gcp/prod/service/: moonlink_service.yaml
pg_mooncake/moonlink/deploy/gcp/staging/deployment/: moonlink_deployment.yaml
pg_mooncake/moonlink/deploy/gcp/staging/service/: moonlink_service.yaml
pg_mooncake/moonlink/deploy/kind/: README.md  cleanup.sh  local_setup_script.sh
pg_mooncake/moonlink/deploy/kind/config/: moonlink_nginx_config.yaml
pg_mooncake/moonlink/deploy/kind/deployment/: moonlink_deployment.yaml
pg_mooncake/moonlink/deploy/kind/service/: moonlink_service.yaml
pg_mooncake/moonlink/src/moonlink/: Cargo.toml
pg_mooncake/moonlink/src/moonlink/benches/: bench_write.rs  benchmark.md  microbench_index_stress.rs  microbench_row_comparison.rs  microbench_write_mooncake_table.rs
pg_mooncake/moonlink/src/moonlink/src/: error.rs  event_sync.rs  lib.rs  lsn_state.rs  mooncake_table_id.rs  row.rs  storage.rs  table_handler.rs  table_handler_timer.rs  table_notify.rs  union_read.rs
pg_mooncake/moonlink/src/moonlink/src/observability/: iceberg_persistence.rs  iceberg_table_recovery.rs  latency_exporter.rs  latency_guard.rs  mod.rs  snapshot_creation.rs
pg_mooncake/moonlink/src/moonlink_backend/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_backend/src/: config_utils.rs  error.rs  file_utils.rs  lib.rs  parquet_utils.rs  recovery_utils.rs  table_config.rs  table_status.rs
pg_mooncake/moonlink/src/moonlink_backend/tests/: bulk_ingestion_test.rs  common.rs  test_basic.rs  test_control_plane_recovery.rs  test_drop.rs  test_initial_copy.rs  test_postgres_source.rs  test_replication_client.rs  test_replication_recovery.rs  test_table_recovery.rs  test_wal_recovery.rs
pg_mooncake/moonlink/src/moonlink_connectors/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_connectors/src/: error.rs  lib.rs  pg_replicate.rs  replication_connection.rs  replication_manager.rs  rest_ingest.rs
pg_mooncake/moonlink/src/moonlink_datafusion/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_datafusion/src/: catalog_provider.rs  connection_pool.rs  error.rs  lib.rs  main.rs  schema_provider.rs  table_provider.rs
pg_mooncake/moonlink/src/moonlink_error/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_error/src/: error.rs  io_error_utils.rs  lib.rs
pg_mooncake/moonlink/src/moonlink_metadata_store/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_metadata_store/src/: base_metadata_store.rs  config_utils.rs  error.rs  lib.rs  metadata_store_utils.rs  postgres.rs  sqlite.rs  test_utils.rs
pg_mooncake/moonlink/src/moonlink_metadata_store/tests/: test_pg_metadata_store.rs  test_pg_metadata_store_utils.rs
pg_mooncake/moonlink/src/moonlink_proto/: Cargo.toml  build.rs
pg_mooncake/moonlink/src/moonlink_proto/proto/: row.proto
pg_mooncake/moonlink/src/moonlink_proto/src/: lib.rs
pg_mooncake/moonlink/src/moonlink_rpc/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_rpc/src/: error.rs  lib.rs
pg_mooncake/moonlink/src/moonlink_service/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_service/examples/: rest_api_demo.rs
pg_mooncake/moonlink/src/moonlink_service/src/: error.rs  lib.rs  logging.rs  main.rs  otel.rs  rest_api.rs  rpc_server.rs  test.rs  test_guard.rs  test_utils.rs
pg_mooncake/moonlink/src/moonlink_table_metadata/: Cargo.toml
pg_mooncake/moonlink/src/moonlink_table_metadata/src/: lib.rs  table_metadata.rs
(+256 files in other folders)
