[workspace]
members = [
    "src/moonlink",
    "src/moonlink_backend",
    "src/moonlink_connectors",
    "src/moonlink_datafusion",
    "src/moonlink_error",
    "src/moonlink_metadata_store",
    "src/moonlink_proto",
    "src/moonlink_rpc",
    "src/moonlink_service",
    "src/moonlink_table_metadata",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-BSL-1.1"

[workspace.dependencies]
anyhow = "1.0"
apache-avro = "0.20"
arrow = { version = "55", default-features = false, features = [
  "canonical_extension_types",
] }
arrow-array = "55"
arrow-buffer = "55"
arrow-ipc = "55"
arrow-schema = { version = "55", features = ["serde"] }
async-stream = "0.3"
async-trait = "0.1"
backon = "1.6"
bincode = { version = "2", features = ["serde"] }
bitstream-io = "4.9"
bytes = "1.0"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
crc32fast = "1"
datafusion = "49"
datafusion-cli = "49"
deltalake = "0.28"
fastbloom = "0.14"
futures = { version = "0.3", default-features = false }
hashbrown = "0.16"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "790e0253a6d1ba83a54f51cf8a8ed62a5c2da7f5", default-features = false, features = [
  "storage-fs",
] }
iceberg-catalog-glue = { git = "https://github.com/apache/iceberg-rust", rev = "790e0253a6d1ba83a54f51cf8a8ed62a5c2da7f5" }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "790e0253a6d1ba83a54f51cf8a8ed62a5c2da7f5" }
itertools = "0.14"
lru = "0.16"
moka = { version = "0.12", features = ["future"] }
moonlink = { path = "src/moonlink" }
moonlink_backend = { path = "src/moonlink_backend" }
moonlink_connectors = { path = "src/moonlink_connectors" }
moonlink_datafusion = { path = "src/moonlink_datafusion" }
moonlink_error = { path = "src/moonlink_error" }
moonlink_metadata_store = { path = "src/moonlink_metadata_store" }
moonlink_proto = { path = "src/moonlink_proto" }
moonlink_rpc = { path = "src/moonlink_rpc" }
moonlink_service = { path = "src/moonlink_service" }
moonlink_table_metadata = { path = "src/moonlink_table_metadata" }
more-asserts = "0.3"
multimap = { version = "0.10", default-features = false }
native-tls = "0.2.14"
nix = { version = "0.30", default-features = false, features = ["fs"] }
num-bigint = "0.4"
num-traits = "0.2"
object_store = "0.12"
opendal = { version = "0.54", default-features = false, features = ["layers-throttle"] }
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
  "metrics",
] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
  "reqwest-blocking-client",
  "http-proto",
  "trace",
  "metrics",
] }
opentelemetry-stdout = { version = "0.31", default-features = false, features = [
    "trace",
    "metrics",
] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
  "trace",
  "metrics",
] }
parquet = { version = "55", default-features = false, features = [
  "arrow",
  "async",
  "arrow_canonical_extension_types",
] }
paste = "1"
postgres-native-tls = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455" }
postgres-replication = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455" }
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455", features = [
  "with-serde_json-1",
] }
prost = "0.14"
prost-types = "0.14"
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.12", features = ["json"] }
roaring = "0.11"
rstest = "0.26"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
serial_test = "3.0"
smallvec = "1.15"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.48", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tracing",
] }
tokio-bitstream-io = "0.0"
tokio-postgres = { git = "https://github.com/Mooncake-labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455", features = [
  "with-serde_json-1",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
typed-builder = "0.22"
url = "2.5"
uuid = { version = "1.18", default-features = false, features = ["v4"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
postgres-types = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455" }
postgres-protocol = { git = "https://github.com/Mooncake-Labs/rust-postgres.git", rev = "14c8e599f5551a8caa96ff5023685a6f537a1455" }
