[package]
name = "moonlink_backend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["storage-fs"]

bulk-ingestion-test = []

test-utils = ["moonlink/test-utils", "moonlink_metadata_store/test-utils"]
metadata-postgres = ["moonlink_metadata_store/metadata-postgres"]
test-tls = ["moonlink_connectors/test-tls", "moonlink_metadata_store/test-tls"]

storage-s3 = ["moonlink/storage-s3", "moonlink_metadata_store/storage-s3"]
storage-gcs = ["moonlink/storage-gcs", "moonlink_metadata_store/storage-gcs"]
storage-fs = ["moonlink/storage-fs", "moonlink_metadata_store/storage-fs"]
storage-all = ["storage-s3", "storage-gcs", "storage-fs"]

[dependencies]
apache-avro = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
moonlink = { workspace = true, features = ["test-utils"] }
moonlink_connectors = { workspace = true }
moonlink_error = { workspace = true }
moonlink_metadata_store = { workspace = true }
moonlink_table_metadata = { workspace = true }
more-asserts = { workspace = true }
native-tls = { workspace = true }
nix = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
postgres-native-tls = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
iceberg = { workspace = true }
roaring = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
thrift = "0.17"
tokio = { workspace = true, features = ["test-util"] }
tokio-postgres = { workspace = true }
