[package]
name = "moonlink_connectors"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
storage-s3 = ["moonlink/storage-s3"]
storage-gcs = ["moonlink/storage-gcs"]
storage-fs = ["moonlink/storage-fs"]
connector-pg = []
test-tls = []

[dependencies]
anyhow = { workspace = true }
apache-avro = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
bigdecimal = { version = "0.4", default-features = false, features = ["std"] }
byteorder = "1.5"
bytes = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
futures = { workspace = true }
moonlink = { workspace = true }
moonlink_error = { workspace = true }
moonlink_proto = { workspace = true }
more-asserts = { workspace = true }
native-tls = { workspace = true }
num-traits = { workspace = true }
parquet = { workspace = true }
pg_escape = "0.1"
pin-project-lite = "0.2"
postgres-native-tls = { workspace = true }
postgres-replication = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true, default-features = true }
uuid = { workspace = true }

[dev-dependencies]
iceberg = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
