[package]
name = "moonlink_datafusion"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
arrow = { workspace = true }
arrow-ipc = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
datafusion-cli = { workspace = true }
moonlink_error = { workspace = true }
moonlink_rpc = { workspace = true }
moonlink_table_metadata = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
roaring = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
