[package]
name = "moonlink_error"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
serde_json = { workspace = true }
