[package]
name = "moonlink_metadata_store"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["storage-fs", "metadata-sqlite"]
storage-all = ["storage-fs", "metadata-postgres", "metadata-sqlite"]

storage-s3 = ["moonlink/storage-s3"]
storage-gcs = ["moonlink/storage-gcs"]
storage-fs = ["moonlink/storage-fs"]

metadata-all = ["metadata-sqlite", "metadata-postgres"]
metadata-postgres = ["postgres-types", "tokio-postgres"]
metadata-sqlite = ["sqlx"]

test-tls = []
test-utils = ["moonlink/test-utils"]

[dependencies]
async-trait = { workspace = true }
moonlink = { workspace = true }
moonlink_error = { workspace = true }
more-asserts = { workspace = true }
native-tls = { workspace = true }
postgres-native-tls = { workspace = true }
postgres-types = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio",
], optional = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true, optional = true }
url = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[[test]]
name = "test_pg_metadata_store_utils"
path = "tests/test_pg_metadata_store_utils.rs"
required-features = ["metadata-postgres", "test-utils"]

[[test]]
name = "test_pg_metadata_store"
path = "tests/test_pg_metadata_store.rs"
required-features = ["metadata-postgres", "test-utils"]
